# Flyx-rxfx

./: .dockerignore  .env.example  .env.local  .gitignore  1movies-bundle.js  1movies-episodes-response.json  1movies-fnaf2.html  1movies-home.html  1movies-links-response.json  1movies-movie.html  1movies-response-1765000122192.txt  1movies-result.json  1movies-source-1765000217449.txt  1movies-source-1765000218417.txt  1movies-source-1765000221619.txt  1movies-source-1765000222149.txt  2EMBED-ANALYSIS-SUMMARY.md  ADMIN_ANALYTICS_GUIDE.md  ADMIN_DATA_CONSISTENCY_FIX.md  ADMIN_OPTIMIZATION_SUMMARY.md  ADMIN_SETUP.md  AGGRESSIVE-PLAYERJS-SEARCH.js  ANALYTICS_FIX_SUMMARY.md  ANALYTICS_TRACKING.md  ANALYZE-DIV-CONTENT-PATTERN.js  ANALYZE-ENCODED-PATTERN.js  ANALYZE-HEX-DIV-CONTENT.js  ANALYZE-PLAYER-PAGE-DECODER.js  ANALYZE-RCP-REQUEST-FLOW.js  ANIME-PLAYBACK-DIAGNOSIS.md  ANIME-PLAYBACK-FINAL-REPORT.md  ANIME-PLAYBACK-FIX-APPLIED.md  ANIME-PLAYBACK-SOLUTION.md  ANIME-SYSTEM-RUST-SOLUTION.md  BEAUTIFY-AND-EXTRACT.js  BROWSER-DECODER-TEST.html  BRUTE-FORCE-DECODER.js  CAPTURE-DIV-CONTENT.js  CLEAN_PROJECT_STRUCTURE.md  COMPLETE-CHAIN-PRORCP-REVERSE.js  (+319 more)
app/: globals.css  layout.tsx  page.tsx
cf-analytics-worker/: README.md  package-lock.json  package.json  wrangler.toml
cf-sync-worker/: README.md  package-lock.json  package.json  schema.sql  tsconfig.json  wrangler.toml
cloudflare-proxy/: .dev.vars.example  DLHD-OXYLABS-SETUP.md  README.md  (+2 more)
rpi-proxy/rust-fetch/: Cargo.toml  README.md  build.sh
rpi-proxy/rust-fetch/src/: animekai.rs  animekai_tables.rs  main.rs
(+1627 files in other folders)
