[package]
name = "rust-fetch"
version = "0.2.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json", "cookies", "gzip", "brotli"] }
tokio = { version = "1.35", features = ["rt", "macros"] }
serde_json = "1.0"
anyhow = "1.0"
base64 = "0.21"
url = "2.5"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
